Aligned center on html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>To Do List | Timeline is Key</title>
 </head>
 
-<body>
-    <div class="container">
-        <h1>TO DO</h1>
+<body style="text-align: center">
+    <div class="container" align="center">
+         <h1>TO DO</h1>
         <input type="text" class="inputField"/><button class="addToDo">+</button>
         <div class="toDoContainer"></div>
     </div>
